<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@color/lightGreen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/faq_01_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/faq_01_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/faq_02_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/faq_02_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/faq_03_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/faq_03_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/faq_04_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/faq_04_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/faq_05_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/faq_05_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</ScrollView>