<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@color/lightBlue"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:text="@string/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#606060"
            android:textSize="15sp"
            android:text="About Sarwar App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/about_us_section_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/about_us_section_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/about_us_section_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#606060"
            android:textSize="15sp"
            android:text="Contributors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/about_us_section_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/about_us_section_05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</ScrollView>