<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/login_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="paul.cipherresfeber.sarwar.activities.LoginActivity">

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="@string/app_tag_line"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="25sp"
        android:text="Sign In"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="@string/phone_number"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_phone_number"
        android:inputType="phone"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter your phone number"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="@string/password"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter your password"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forgot_password"
        android:textColor="#fff"
        android:text="Forgot Password?"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_up"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:text="sign in"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="45dp" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="#fff"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <TextView
            android:textColor="#fff"
            android:text="@string/or_login_using"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:background="#fff"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/google_login"
            android:contentDescription="Google Logo"
            android:layout_gravity="center"
            android:src="@drawable/google_logo"
            android:layout_width="45dp"
            android:layout_height="45dp" />

        <View
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/facebook_login"
            android:contentDescription="Facebook Login"
            android:layout_gravity="center"
            android:src="@drawable/facebook_logo"
            android:layout_width="45dp"
            android:layout_height="45dp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:layout_marginBottom="10dp"
        android:id="@+id/create_an_account"
        android:textStyle="bold"
        android:textColor="#fff"
        android:text="Create an account"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_marginBottom="5dp"
        android:textColor="#fff"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>