<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/login_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="@string/app_tag_line"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="25sp"
        android:text="Create an Account"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="Username"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter your full name"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="@string/phone_number"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_phone_number"
        android:inputType="phone"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter your phone number"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="13sp"
        android:text="Password*"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter a strong password"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:textSize="10sp"
        android:text="*Password can't be changed later, but can be retrieved!"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_otp"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:text="Send otp"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="45dp" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


    <EditText
        android:id="@+id/otp"
        android:inputType="number"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="Enter your OTP"
        android:textColorHint="#D8D8D8"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/verify_button"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:text="Verify OTP"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="45dp" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>